--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,61 @@
-name: Deploy React app to GitHub Pages
+name: Test, build, and deploy a Vite web app to GitHub Pages
 
 on:
   push:
-    branches: [main] # or 'master' if that's your default branch
+    branches: [main]
   workflow_dispatch:
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
+# The environment for the deployment
+environment:
+  name: github-pages
+  url: ${{ steps.deployment.outputs.page_url }}
+
 jobs:
+  # -----------------------------
+  # 1. Test job
+  # -----------------------------
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v5
+
+      - name: Setup Node.js ⚙️
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - name: Install dependencies 📦
+        run: npm ci
+
+      - name: Run tests 🧪
+        run: npm test --if-present
+
+  # -----------------------------
+  # 2. Build job
+  # -----------------------------
   build:
-    permissions:
-      contents: write
-      pages: write
-      id-token: write
+    needs: test # Depends on the test job running successfully
 
     runs-on: ubuntu-latest
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+    outputs:
+      build-artifact: ${{ steps.upload.outputs.artifact-id }}
 
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v5
 
       - name: Setup Node.js ⚙️
-        uses: actions/setup-node@v6
+        uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
+          cache: npm
 
       - name: Install dependencies 📦
         run: npm ci
@@ -38,10 +67,20 @@ jobs:
         uses: actions/configure-pages@v5
 
       - name: Upload artifact
+        id: upload
         uses: actions/upload-pages-artifact@v4
         with:
-          path: "./dist"
+          path: ./dist
 
-      - name: Deploy to GitHub Pages
+  # -----------------------------
+  # 3. Deploy job
+  # -----------------------------
+  deploy:
+    needs: build # Depends on the build job running successfully
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Deploy to GitHub Pages 🚀
         id: deployment
         uses: actions/deploy-pages@v4
