--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,22 +5,16 @@ on:
     branches: [main]
   workflow_dispatch:
 
-permissions:
-  contents: write
-  pages: write
-  id-token: write
-
-# The environment for the deployment
-environment:
-  name: github-pages
-  url: ${{ steps.deployment.outputs.page_url }}
-
 jobs:
   # -----------------------------
   # 1. Test job
   # -----------------------------
   test:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v5
@@ -44,6 +38,15 @@ jobs:
     needs: test # Depends on the test job running successfully
 
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
+    # The environment for the deployment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     outputs:
       build-artifact: ${{ steps.upload.outputs.artifact-id }}
 
@@ -77,6 +80,14 @@ jobs:
   # -----------------------------
   deploy:
     needs: build # Depends on the build job running successfully
+
+    permissions:
+      contents: read
+
+    # The environment for the deployment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     runs-on: ubuntu-latest
 
